--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -51,25 +51,25 @@
 <!ENTITY Ctr_tabheightinfo	"Niedrige Werte sorgen für eine fehlerhafte Darstellung im maximierten Fenster!">
 <!ENTITY Ctr_tabmaxwidth	"Maximalbreite:">
 <!ENTITY Ctr_tabminwidth	"Minimalbreite:">
-<!ENTITY Ctr_tabwidthinfo	"Die Minimal- und Maximalbreite von Tabs wird von 'TabMixPlus' kontrolliert">
-<!ENTITY Ctr_tabwidthinfo2	"Die Minimal- und Maximalbreite von Tabs wird von 'TabUtilities' kontrolliert">
-<!ENTITY Ctr_tabwidthinfo3	"Werte unter 48px sorgen meistens für eine fehlerhafte Darstellung!">
+<!ENTITY Ctr_tabwidthinfo	"Die Minimal- und Maximalbreite von Tabs wird von 'Tab Mix Plus' kontrolliert">
+<!ENTITY Ctr_tabwidthinfo2	"Die Minimal- und Maximalbreite von Tabs wird von 'Tab Utilities' kontrolliert">
+<!ENTITY Ctr_tabwidthinfo3	"Werte unter 48 px sorgen meistens für eine fehlerhafte Darstellung!">
 <!ENTITY Ctr_square_edges	"Eckige obere Tabränder">
 <!ENTITY Ctr_tttitlebar		"Tabtitel in der &brandShortName;-Titelleiste">
 <!ENTITY Ctr_tabinsertion	"Verwandten Tab nach aktuellem Tab einfügen (about:config-Einstellung)">
 <!ENTITY Ctr_emptytfavico	"Lesezeichensymbol auf Tabs zeigen (falls keines vorhanden ist)">
-<!ENTITY Ctr_emptytfavico_n	"Kein">
+<!ENTITY Ctr_emptytfavico_n	"Kein Symbol">
 <!ENTITY Ctr_emptytfavico_g	"Allgemein">
 <!ENTITY Ctr_noemptypticon	"Leeres Lesezeichensymbol auf angehefteten Tabs verstecken">
 <!ENTITY Ctr_e10stab_notd	"E10s-Tabs: Unterstreichung entfernen">
-<!ENTITY Ctr_closetab_0		"'Tab schließen'">
+<!ENTITY Ctr_closetab_0		"'Tab schließen'-Schaltfläche">
 <!ENTITY Ctr_closetab_1		"Nur auf dem aktiven Tab">
 <!ENTITY Ctr_closetab_2		"Nirgends (deaktiviert)">
 <!ENTITY Ctr_closetab_3		"Am Ende der Tableiste">
 <!ENTITY Ctr_closetab_4		"Am Anfang der Tableiste">
 <!ENTITY Ctr_closetab_5		"Auf allen Tabs erzwingen">
 <!ENTITY Ctr_closetab_hfot	"Bei nur einem sichtbaren Tab verstecken">
-<!ENTITY Ctr_closei_def		"Standard-Symbole">
+<!ENTITY Ctr_closei_def		"Standard-Symbol">
 <!ENTITY Ctr_closeonleft	"Am Anfang des Tabs">
 <!ENTITY Ctr_closetabbig	"Größeres Symbol (20x20 px)">
 <!ENTITY Ctr_close_wwltab	"Fenster mit nur einem sichtbaren Tab schließen (about:config-Einstellung)">
@@ -111,11 +111,11 @@
 <!ENTITY Ctr_appbutonclab2	"Titel eintragen oder leer lassen">
 
 <!ENTITY Ctr_ui				"Oberfläche">
-<!ENTITY Ctr_nbiconsize0	"Navigationsleisten-Attribut für Symbolgröße: 'iconsize'">
-<!ENTITY Ctr_smallnavbut	"Kleine Schaltflächen auf der Navigationsleiste">
+<!ENTITY Ctr_nbiconsize0	"Attribut für Symbolgröße: 'iconsize'">
+<!ENTITY Ctr_smallnavbut	"Kleine Schaltflächen auf der Navigations-Symbolleiste">
 <!ENTITY Ctr_bfurlbarfix 	"Radius der Adressleistenränder korrigieren">
-<!ENTITY Ctr_backforward	"Verschiebbare Vor-Zurück-Schaltflächen">
-<!ENTITY Ctr_nbcompact		"Höhe der Navigationsleiste reduzieren">
+<!ENTITY Ctr_backforward	"Verschiebbare Zurück-Vor-Schaltfläche">
+<!ENTITY Ctr_nbcompact		"Höhe der Navigations-Symbolleiste reduzieren">
 <!ENTITY Ctr_hide_bf_popup	"Chronik-Aufklappmenü bei gedrückter Maustaste verstecken">
 <!ENTITY Ctr_bf_space		"Zwischenraum reduzieren (falls möglich)">
 <!ENTITY Ctr_noconicons		"Seitenkontextmenü: Symbole durch Namen ersetzen (Zurück, Vor …)">
@@ -123,12 +123,12 @@
 <!ENTITY Ctr_altoptionsd	"Standard-Darstellung">
 <!ENTITY Ctr_altoptionsp	"Alternative Darstellung">
 <!ENTITY Ctr_altoptionsw	"Einstellungsseite in einem Fenster öffnen">
-<!ENTITY Ctr_altoptionsww	"Breite">
-<!ENTITY Ctr_altoptionswh	"Höhe">
-<!ENTITY Ctr_altoptionsi	"Das simulierte Einstellungsfenster ist kein Dialogfenster mehr, sondern ein leistenloses normales Fenster. Die Funktion 'Aktuelle Seite verwenden' fügt nur Adressen hinzu, die im aktuellen Fenster geöffnet sind, was in diesem Fall nur 'about:preferences' ist. Die Leisten-Schaltfläche 'Einstellungen' wird durch eine neue ersetzt, die es ermöglicht, ein Einstellungsfenster zu öffnen.">
+<!ENTITY Ctr_altoptionsww	"Breite:">
+<!ENTITY Ctr_altoptionswh	"Höhe:">
+<!ENTITY Ctr_altoptionsi	"Das simulierte Einstellungsfenster ist kein Dialogfenster mehr, sondern ein leistenloses normales Fenster. Die Leistenschaltfläche 'Einstellungen' wird durch 'Einstellungen (Fenster)' ersetzt. Diese Schaltfläche muss einmalig im Modus 'Anpassen' zur Menüleiste hinzugefügt werden.">
 <!ENTITY Ctr_options_rem	"Zuletzt besuchte Kategorie speichern">
 <!ENTITY Ctr_svgfilters		"SVG-Farben für Symbole von 'Standard-Schaltflächen'">
-<!ENTITY Ctr_wincontrols	"Verschiebbare Fenster-Schaltflächen im Vollbild-Modus">
+<!ENTITY Ctr_wincontrols	"Verschiebbare Fenster-Schaltflächen im Vollbildmodus">
 <!ENTITY Ctr_oldtoplevimg	"Bilder oberster Ebene (Top-Level-Domain): klassische Darstellung">
 <!ENTITY Ctr_altalertbox	"'Benachrichtigungs-Box': alternative Darstellung">
 <!ENTITY Ctr_emptygfavico	"Allgemeines Lesezeichensymbol ersetzen">
@@ -139,7 +139,7 @@
 <!ENTITY Ctr_mstatusbarabr	"Statusbereich wird von 'The Addon Bar (Restored)' kontrolliert">
 <!ENTITY Ctr_combrelstop	"'Stopp' &amp; 'Neu laden': Leistenschaltflächen kombinieren">
 <!ENTITY Ctr_stoprel1		"Reihenfolge beachten: 'Stopp' muss vor 'Neu laden' sein!">
-<!ENTITY Ctr_panelmenucol	"Alternative Hintergrundfarbe für das 'Panel-Aufklappmenü'">
+<!ENTITY Ctr_panelmenucol	"Alternative Hintergrundfarbe für 'Panel-Aufklappmenüs'">
 <!ENTITY Ctr_hideprivmask	"Privater Modus: keine 'Masken-Symbole' auf Leisten anzeigen">
 <!ENTITY Ctr_navsmallicons	"Kleine Symbole">
 <!ENTITY Ctr_navlargeicons	"Große Symbole">
@@ -157,7 +157,7 @@
 <!ENTITY Ctr_nav_txt_exp	"Klassische Attribute (experimentell):">
 <!ENTITY Ctr_iat_notf_vt	"Vertikale Leisten ausschließen">
 <!ENTITY Ctr_cpanelmenus	"Kompakte 'Panel-Aufklappmenüs' (Lesezeichen, Chronik etc.)">
-<!ENTITY Ctr_hidezoomres	"Zoom-Schaltflächen auf Leisten: Schaltfläche 'Normalgröße' verstecken">
+<!ENTITY Ctr_hidezoomres	"Zoom-Schaltflächen auf Leisten: 'Normalgröße'-Schaltfläche verstecken">
 <!ENTITY Ctr_alt_newtabp	"Seite 'Neuer Tab' (about:newtab): alternative Darstellung">
 <!ENTITY Ctr_ctroldsearch	"Alte 'Suche'">
 <!ENTITY Ctr_ctroldsearchc	"Eingabefeld nach der Suche leeren">
@@ -165,34 +165,34 @@
 <!ENTITY Ctr_osearch_meoit	"Mittelklick: Suche im Vordergrund-Tab öffnen">
 <!ENTITY Ctr_osearch_dm		"Kleinere Aufklapp-Schaltfläche">
 <!ENTITY Ctr_addonmanager	"Add-ons-Manager">
-<!ENTITY Ctr_alt_addonsp	"'Mehr Info'-Seite: Alternative Anordnung">
+<!ENTITY Ctr_alt_addonsp	"'Mehr Details'-Seite: Alternative Anordnung">
 <!ENTITY Ctr_alt_addonsm	"Alternative Darstellung">
-<!ENTITY Ctr_am_nowarning	"Add-on-'Übersicht': Warnungen ausblenden">
-<!ENTITY Ctr_am_compact		"Add-on-'Übersicht': Kompakte Darstellung">
+<!ENTITY Ctr_am_nowarning	"Add-on-Übersicht: Warnungen ausblenden">
+<!ENTITY Ctr_am_compact		"Add-on-Übersicht: Kompakte Darstellung">
 <!ENTITY Ctr_am_compact2	"Kompakte Darstellung +">
-<!ENTITY Ctr_am_highlight	"Add-on-'Übersicht': Eintrag beim 'Hovern' hervorheben">
-<!ENTITY Ctr_am_buticons	"Add-on-'Übersicht': Schaltflächentexte durch Symbole ersetzen">
-<!ENTITY Ctr_am_hovshowb	"Add-on-'Übersicht': Schaltflächen nur beim 'Hovern' anzeigen">
-<!ENTITY Ctr_addonversion	"Add-on-'Übersicht': Versionsnummer von Add-ons anzeigen">
+<!ENTITY Ctr_am_highlight	"Add-on-Übersicht: Eintrag beim 'Hovern' hervorheben">
+<!ENTITY Ctr_am_buticons	"Add-on-Übersicht: Schaltflächentexte durch Symbole ersetzen">
+<!ENTITY Ctr_am_hovshowb	"Add-on-Übersicht: Schaltflächen nur beim 'Hovern' anzeigen">
+<!ENTITY Ctr_addonversion	"Add-on-Übersicht: Versionsnummer von Add-ons anzeigen">
 <!ENTITY Ctr_xpinstallui	"Altes Add-on-Installationsfenster (about:config-Einstellung)">
 <!ENTITY Ctr_bmbutton		"Lesezeichen-Menüschaltfläche">
-<!ENTITY Ctr_hiderecentbm	"Lesezeichen-Popup: Zuletzt hinzugefügte Lesezeichen verstecken">
-<!ENTITY Ctr_hideeditbm		"Lesezeichen-Stern: Popup verstecken (wenn Seite noch kein Lesezeichen ist)">
+<!ENTITY Ctr_hiderecentbm	"Lesezeichen-Pop-up: Zuletzt hinzugefügte Lesezeichen verstecken">
+<!ENTITY Ctr_hideeditbm		"Lesezeichen-Stern: Pop-up verstecken (wenn Seite noch kein Lesezeichen ist)">
 <!ENTITY Ctr_bmbutpanelm	"Aufklappmenü: 'Panel'-Darstellung">
-<!ENTITY Ctr_bmbunsortbm	"Aufklappmenü: 'Unsortierte Lesezeichen'-Menü">
+<!ENTITY Ctr_bmbunsortbm	"Aufklappmenü: 'Unsortierte Lesezeichen'-Menü anzeigen">
 <!ENTITY Ctr_bmbunsortbm2	"Menü über den Lesezeichen">
 <!ENTITY Ctr_bmbviewbmtb	"Aufklappmenü: 'Lesezeichen-Symbolleiste' anzeigen">
 <!ENTITY Ctr_bmbnounsort	"Aufklappmenü: 'Unsortierte Lesezeichen' verstecken">
-<!ENTITY Ctr_bmbutnotext	"Text auf der Lesezeichenleiste verstecken">
+<!ENTITY Ctr_bmbutnotext	"Text auch auf der Lesezeichen-Symbolleiste verstecken">
 <!ENTITY Ctr_skipprintpr	"Drucken-Schaltfläche: Druckvorschau überspringen">
-<!ENTITY Ctr_tbconmenu		"Leisten-Kontextmenü: 'In Menü verschieben', 'Aus Symbolleiste entfernen', 'Alle Tabs neu laden', 'Lesezeichen für alle Tabs hinzufügen …' und 'Geschlossenen Tab wiederherstellen' verstecken">
-<!ENTITY Ctr_noresizerxp	"'Resizer' verstecken (Windows XP/2000)">
+<!ENTITY Ctr_tbconmenu		"Leistenkontextmenü: 'In Menü verschieben', 'Aus Symbolleiste entfernen', 'Alle Tabs neu laden', 'Lesezeichen für alle Tabs hinzufügen …' und 'Geschlossenen Tab wiederherstellen' verstecken">
+<!ENTITY Ctr_noresizerxp	"'Resizer' verstecken (Windows 2000/XP)">
 <!ENTITY Ctr_extraurlkeycb	"Weitere Adressleiste öffnen (Cmd/Strg+">
-<!ENTITY Ctr_pmhidelabels	"Menüschaltflächen-Aufklappmenü: Schaltflächen-Text verstecken">
+<!ENTITY Ctr_pmhidelabels	"Menüschaltflächen-Aufklappmenü: Schaltflächentext verstecken">
 <!ENTITY Ctr_menupopupscr	"Aufklappmenüs: Navigationspfeile durch Bildlaufleisten ersetzen">
-<!ENTITY Ctr_closegeneral	"Schließen-Symbole">
+<!ENTITY Ctr_closegeneral	"Schließen-Symbol">
 
-<!ENTITY Ctr_tabsep_def		"Standard-Trennlinien">
+<!ENTITY Ctr_tabsep_def		"Standard-Trennlinie">
 <!ENTITY Ctr_fxmockup		"&brandShortName;-Entwürfe">
 <!ENTITY Ctr_tabmokcolor	"Weiße Schaltflächen (Neu, Schließen, Gruppen, Listen)">
 <!ENTITY Ctr_tabmokcolor2	"Weißer Tabtext und dunkler Schatten für nicht aktive Tabs">
@@ -233,12 +233,12 @@
 <!ENTITY Ctr_hideurelstop	"'Stopp' &amp; 'Neu laden' entfernen">
 <!ENTITY Ctr_hideurelstop2	"'Los' immer anzeigen">
 <!ENTITY Ctr_hideurlgo		"'Los' entfernen">
-<!ENTITY Ctr_hideurlsrg		"'Neu laden', 'Stopp &amp; Los', Trennlinien und Leerstellen entfernen">
+<!ENTITY Ctr_hideurlsrg		"'Neu laden', 'Stopp', 'Los', Trennlinie und Zwischenräume entfernen">
 <!ENTITY Ctr_urlbardropm	"Aufklapp-Schaltfläche an die letztmögliche Position verschieben">
 <!ENTITY Ctr_urlbardropm2	"Aufklapp-Schaltfläche immer anzeigen">
-<!ENTITY Ctr_altreaderico	"Alternative Symbole für die 'Lese-Modus'-Schaltfläche">
-<!ENTITY Ctr_hideprbutton	"'Infosymbol' verstecken (wenn ein Popup-Fenster blockiert wurde)">
-<!ENTITY Ctr_urlbar_uc		"'Vereinigte Autovervollständigung' deaktivieren (about:config Einstellung)">
+<!ENTITY Ctr_altreaderico	"Alternatives Symbol für die 'Lesemodus'-Schaltfläche">
+<!ENTITY Ctr_hideprbutton	"'Infosymbol' verstecken (wenn ein Pop-up-Fenster blockiert wurde)">
+<!ENTITY Ctr_urlbar_uc		"'Vereinigte Autovervollständigung' deaktivieren (about:config-Einstellung)">
 <!ENTITY Ctr_locsearchbw10	"Höhe der Adress- und Suchleiste reduzieren (experimentell)">
 <!ENTITY Ctr_urlbar_ib		"Schaltfläche zur Webseitenidentität">
 <!ENTITY Ctr_ib_nohovcolor	"Graue Farbe beim 'Hovern' nicht anzeigen">
@@ -246,7 +246,7 @@
 <!ENTITY Ctr_verifiedcolors	"Farbig bei verifizierten Webseiten, sicheren und unsicheren Verbindungen">
 <!ENTITY Ctr_ibinfoico		"'i'-Symbol durch Globus-Symbol ersetzen">
 <!ENTITY Ctr_ibinfoico2		"'i'-Symbol verstecken (falls möglich)">
-<!ENTITY Ctr_iblabels		"Bezeichnungen verstecken">
+<!ENTITY Ctr_iblabels		"Text verstecken">
 <!ENTITY Ctr_faviconurl		"Lesezeichensymbol (Favicon) der Webseite">
 <!ENTITY Ctr_padlock		"Schloss-Symbol bei sicheren Verbindungen">
 <!ENTITY Ctr_padlock_hid	"versteckt">
@@ -269,8 +269,8 @@
 <!ENTITY Ctr_invicons		"Invertierte Symbole">
 <!ENTITY Ctr_menubar		"Menüleiste">
 <!ENTITY Ctr_tabstoolbar	"Tableiste">
-<!ENTITY Ctr_navbar			"Navigationsleiste">
-<!ENTITY Ctr_bookbar		"Lesezeichenleiste">
+<!ENTITY Ctr_navbar			"Navigations-Symbolleiste">
+<!ENTITY Ctr_bookbar		"Lesezeichen-Symbolleiste">
 <!ENTITY Ctr_notoolbar		"Versteckt (keine Menüeinträge anzeigen)">
 
 <!ENTITY Ctr_mbarforceleft	"Erstes Element">
@@ -302,20 +302,20 @@
 <!ENTITY Ctr_navbarpad_l	"Links:">
 <!ENTITY Ctr_navbarpad_r	"Rechts:">
 <!ENTITY Ctr_nobookbarbg	"Hintergrundfarbe entfernen">
-<!ENTITY Ctr_bookbarfs		"Im 'Vollbild'-Modus">
+<!ENTITY Ctr_bookbarfs		"Im 'Vollbildmodus'">
 <!ENTITY Ctr_nonavbarbg		"Hintergrundfarbe entfernen">
-<!ENTITY Ctr_nonavbarbg1	"Einstellung hat Auswirkung auf alle Extraleisten und 'andere' obere Leisten.">
+<!ENTITY Ctr_nonavbarbg1	"Einstellung hat Auswirkung auf alle Extraleisten und andere obere Leisten.">
 <!ENTITY Ctr_nonavbarbg2	"Einstellung hat Auswirkung auf alle Leisten in der 'Slim'-Darstellung der Erweiterung 'Beyond Australis'.">
-<!ENTITY Ctr_nonavborder	"Oberen Leistenrand hinzufügen/anzeigen">
+<!ENTITY Ctr_nonavborder	"Obere Randlinie anzeigen">
 <!ENTITY Ctr_nonavtbborder	"Obere Leisten: Leistenränder nicht anzeigen">
 <!ENTITY Ctr_hidesbclose	"Seitenleisten: 'Schließen'-Schaltfläche verstecken">
-<!ENTITY Ctr_notextshadow	"Leisten: Schatten für Leistentext (und Tabtext) nicht anzeigen">
-<!ENTITY Ctr_chevronfix		"Navigationsleiste: Doppelpfeil am Ende der Leiste nicht anzeigen">
+<!ENTITY Ctr_notextshadow	"Leisten: Textschatten nicht anzeigen">
+<!ENTITY Ctr_chevronfix		"Navigations-Symbolleiste: Doppelpfeil am Ende der Leiste verstecken">
 <!ENTITY Ctr_tbsep_winc		"Obere Leisten: weitere Leistentrennlinien">
 
 <!ENTITY Ctr_closeabarbut	"Add-on-Leiste: 'Schließen'-Schaltfläche verstecken">
 <!ENTITY Ctr_highaddonsbar	"Alternative Leistenhöhe">
-<!ENTITY Ctr_addonbarfs		"Im 'Vollbild'-Modus">
+<!ENTITY Ctr_addonbarfs		"Im 'Vollbildmodus'">
 
 <!ENTITY Ctr_animation		"Animationen">
 <!ENTITY Ctr_tabthrobber	"Standard-Ladeanzeige">
@@ -328,7 +328,7 @@
 
 <!ENTITY Ctr_toolsitem		"Eintrag im Menü 'Extras'">
 <!ENTITY Ctr_appmenuitem	"Eintrag im Einstellungsuntermenü der &brandShortName;-Schaltfläche">
-<!ENTITY Ctr_contextitem	"Eintrag im Leisten-Kontextmenü">
+<!ENTITY Ctr_contextitem	"Eintrag im Leistenkontextmenü">
 <!ENTITY Ctr_puictrbutton	"Eintrag in der Hauptmenüschaltfläche">
 
 <!ENTITY Ctr_otherctroptns	"Andere Einstellungen">
@@ -337,18 +337,18 @@
 
 <!ENTITY Ctr_experttweaks	"Erweitert">
 <!ENTITY Ctr_fx34search		"Das Deaktivieren dieser Option ersetzt die neue 'Suchoberfläche' durch die alte.">
-<!ENTITY Ctr_fx34loop		"Das Deaktivieren dieser Option entfernt die 'Anruf- und Konversations-Funktionen'.">
+<!ENTITY Ctr_fx34loop		"Das Deaktivieren dieser Option entfernt die 'Anruf- und Konversationsfunktionen'.">
 <!ENTITY Ctr_fx35devtheme	"Das Deaktivieren dieser Option deaktiviert das 'Entwickler-Thema'.">
 <!ENTITY Ctr_fx36prefs		"Das Deaktivieren dieser Option stellt das 'alte' Einstellungsfenster wieder her.">
 <!ENTITY Ctr_fx36prefs2		"Info: Einige neue Einstellungen werden im alten Einstellungsfenster nicht angezeigt!">
-<!ENTITY Ctr_fx38reader		"Das Deaktivieren dieser Option deaktiviert den 'Lese-Modus' und entfernt die zugehörige Schaltfläche von der Adressleiste.">
-<!ENTITY Ctr_fx38pocket		"Das Deaktivieren dieser Option entfernt die 'Pocket'-Funktion und deren Leisten-Schaltfläche.">
+<!ENTITY Ctr_fx38reader		"Das Deaktivieren dieser Option deaktiviert den 'Lesemodus' und entfernt die zugehörige Schaltfläche aus der Adressleiste.">
+<!ENTITY Ctr_fx38pocket		"Das Deaktivieren dieser Option entfernt die 'Pocket'-Funktion und deren Leistenschaltfläche.">
 <!ENTITY Ctr_fx38pocket2	"Info: Das Verschieben der 'Pocket'-Schaltfläche zu den nicht verwendeten Schaltflächen im 'Anpassen-Modus' vor der Deaktivierung dieser Option entfernt zusätzlich die 'Pocket'-Einträge aus den Lesezeichen- und 'Lese'-Bereichen.">
 <!ENTITY Ctr_e_searchui		"Suchoberfläche">
 <!ENTITY Ctr_e_loop			"Anruf- und Konversationsfunktionen">
 <!ENTITY Ctr_e_deved		"Entwickler-Thema">
 <!ENTITY Ctr_e_prefsui		"Einstellungen im Tab">
-<!ENTITY Ctr_e_readermode	"Lese-Modus">
+<!ENTITY Ctr_e_readermode	"Lesemodus">
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Audio-Abspiel-Symbol auf Tabs">
 <!ENTITY Ctr_fx42tabsaudico	"Das Deaktivieren dieser Option entfernt das 'Audio-Abspiel-Symbol' von den Tabs.">
@@ -373,9 +373,9 @@
 <!ENTITY appMenuGettingStarted.label	"Erste Schritte">
 <!ENTITY goCmd.label					"Los">
 <!ENTITY Ctr_menu_restart.label			"Neustarten">
-<!ENTITY Ctr_restartapp					"'Neustarten'-Eintrag im '&brandShortName;'- und 'Datei'-Menü">
+<!ENTITY Ctr_restartapp					"'Neustarten'-Eintrag im '&brandShortName;'- und 'Datei-Menü'">
 
-<!-- For page context entries. Have to be adjusted for every locale! -->
+<!-- Seitenkontextmenüschlüssel: individuell für jede Lokalisierung -->
 <!ENTITY backCmd.accesskey				"Z">
 <!ENTITY forwardCmd.accesskey			"V">
 <!ENTITY reloadCmd.accesskey			"N">
