--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -314,7 +314,8 @@
 <!ENTITY Ctr_tbsep_winc		"Obere Leisten: weitere Leistentrennlinien">
 
 <!ENTITY Ctr_closeabarbut	"Add-on-Leiste: 'Schließen'-Schaltfläche verstecken">
-<!ENTITY Ctr_highaddonsbar	"Alternative Leistenhöhe">
+<!ENTITY Ctr_highaddonsbar	"Leistenhöhe erhöhen">
+<!ENTITY Ctr_lessaddonsbar	"Leistenhöhe verringern">
 <!ENTITY Ctr_addonbarfs		"Im 'Vollbildmodus'">
 
 <!ENTITY Ctr_animation		"Animationen">
