--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -315,6 +315,7 @@
 
 <!ENTITY Ctr_closeabarbut	"Απόκρυψη κουμπιού κλεισίματος εργαλειοθήκης πρόσθετων">
 <!ENTITY Ctr_highaddonsbar	"Αύξηση ύψους">
+<!ENTITY Ctr_lessaddonsbar	"Decrease height">
 <!ENTITY Ctr_addonbarfs		"Εμφάνιση σε προβολή πλήρους οθόνης">
 
 <!ENTITY Ctr_animation		"Κινησιομοίωση">
