--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -315,6 +315,7 @@
 
 <!ENTITY Ctr_closeabarbut	"Ocultar botón cerrar de las barras de complementos">
 <!ENTITY Ctr_highaddonsbar	"Incrementar altura">
+<!ENTITY Ctr_lessaddonsbar	"Decrease height">
 <!ENTITY Ctr_addonbarfs		"En modo pantalla completa">
 
 <!ENTITY Ctr_animation		"Animación">
