--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -315,6 +315,7 @@
 
 <!ENTITY Ctr_closeabarbut	"Lisade riba: peida sulgemise nupp">
 <!ENTITY Ctr_highaddonsbar	"Suurenda kõrgust">
+<!ENTITY Ctr_lessaddonsbar	"Decrease height">
 <!ENTITY Ctr_addonbarfs		"Täisekraani režiimis">
 
 <!ENTITY Ctr_animation		"Animatsioon">
