--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -315,6 +315,7 @@
 
 <!ENTITY Ctr_closeabarbut	"Ocultar o Botão Fechar">
 <!ENTITY Ctr_highaddonsbar	"Aumentar a Altura">
+<!ENTITY Ctr_lessaddonsbar	"Decrease height">
 <!ENTITY Ctr_addonbarfs		"No Modo de Tela Cheia">
 
 <!ENTITY Ctr_animation		"Animações">
