--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -315,7 +315,7 @@
 
 <!ENTITY Ctr_closeabarbut	"Pasek dodatków: usuń przycisk zamknięcia">
 <!ENTITY Ctr_highaddonsbar	"Zwiększ wysokość">
-<!ENTITY Ctr_lessaddonsbar	"Decrease height">
+<!ENTITY Ctr_lessaddonsbar	"Zmniejsz wysokość">
 <!ENTITY Ctr_addonbarfs		"W trybie pełnoekranowym">
 
 <!ENTITY Ctr_animation		"Animacje">
