--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -245,8 +245,8 @@
 <!ENTITY Ctr_ib_graycolor	"Color gris para identidades desconocidas y páginas chrome://">
 <!ENTITY Ctr_verifiedcolors	"Botón coloreado para sitios web verificados, y conexiones seguras y no seguras">
 <!ENTITY Ctr_ibinfoico		"Reemplazar icono-'i' con un icono de globo terráqueo">
-<!ENTITY Ctr_ibinfoico2		"Hide 'i'-icon (if possible)">
-<!ENTITY Ctr_iblabels		"Hide labels">
+<!ENTITY Ctr_ibinfoico2		"Ocultar icono-'i' (si es posible)">
+<!ENTITY Ctr_iblabels		"Ocultar etiquetas">
 <!ENTITY Ctr_faviconurl		"Mostrar favicon del sitio web">
 <!ENTITY Ctr_padlock		"Candado para conexiones seguras">
 <!ENTITY Ctr_padlock_hid	"oculto">
@@ -254,7 +254,7 @@
 <!ENTITY Ctr_padlock_cla	"clásico">
 <!ENTITY Ctr_padlock_mod	"moderno">
 <!ENTITY Ctr_padlock_ext	"Icono de '&brandShortName;' para páginas about: válidas">
-<!ENTITY Ctr_icopageinfo	"Favicon/globe-/'i'-icon: 'click' opens 'page info window'">
+<!ENTITY Ctr_icopageinfo	"Favicon/icono de globo-terráqueo/icono-'i': Hacer clic abre la 'ventana de información de la página'">
 <!ENTITY Ctr_lbsbsize		"Ancho personalizado para barra de direcciones y barra de búsqueda">
 <!ENTITY Ctr_searchbar		"Barra de búsqueda">
 <!ENTITY Ctr_lbsugresi		"Mostrar máximo de resultados (sin barra de desplazamiento) en el menú de sugerencias">
@@ -315,7 +315,7 @@
 
 <!ENTITY Ctr_closeabarbut	"Ocultar botón cerrar de las barras de complementos">
 <!ENTITY Ctr_highaddonsbar	"Incrementar altura">
-<!ENTITY Ctr_lessaddonsbar	"Decrease height">
+<!ENTITY Ctr_lessaddonsbar	"Reducir altura">
 <!ENTITY Ctr_addonbarfs		"En modo pantalla completa">
 
 <!ENTITY Ctr_animation		"Animación">
